fix tags overflow

--- a/card.scss
+++ b/card.scss
@@ -65,12 +65,15 @@ body {
   }
 }
 
+.card-header {
+  flex: 1;
+}
+
 .card-author {
   position: relative;
   display: grid;
   grid-template-columns: 75px 1fr;
   align-items: center;
-  margin: 3rem 0 0;
 }
 
 .author-avatar img {
@@ -103,6 +106,8 @@ body {
 }
 
 .tags {
+  display: flex;
+  flex-wrap: wrap;
   margin: 1rem 0 2rem;
   padding: 0.5rem 0 1rem;
   line-height: 2;
@@ -120,5 +125,6 @@ body {
     padding: 0.2rem 0.85rem 0.25rem;
     position: relative;
     text-decoration: none;
+    margin: 1px;
   }
 }
